# Fast-Permissions

./: README.md  pyproject.toml
fast_permissions/: __init__.py  config.py  exceptions.py  html.py  models.py  pwa.py  service.py
